--- a/gb/24/4/14/n14225533.md
+++ b/gb/24/4/14/n14225533.md
@@ -1,7 +1,7 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
-<tr><td VALIGN=TOP width="626"><h2 align=center>住房危机 美国人为买房做出哪些重大牺牲？</h2>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<tr><td VALIGN=TOP width="626"><h2 align=center>美国人为买房做了哪些牺牲？</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2024/04/id14225546-3aafb9d5cfd8a73d541a2982abd2648d-600x400.jpeg" />///image2=```diff
 - 越来越高的房价，加上无法下降的抵押贷款利率，美国人要为了买房付出许多代价。（Shutterstock）
 ```
@@ -13,23 +13,23 @@
 <p>其实，什么是负担得起的房价？经济学家一直在讲，不管是买房或租房，每月在住房上的支出不应该超过家庭收入的30%，这就算是负担得起的费用，如果房价是当地中产阶级负担得起的价格，就可以称之为经济适用房。</p>
 <p>老实说，我一直认为这个百分之30的标准，对中产家庭来说有点不太现实，以现在的美国房价看起来，更是惨不忍睹！我稍微做个计算：以美国人口普查局2022年，最新的人口调查数据显示，全美家庭收入中位数为74,580美元。这比2021年估计的76,330美元下降了2.3%。</p>
 <p>74,580美元的每月百分之30，大约等于1,865美元，这个数字就是所谓负担得起的住房费用的门槛。但是我们再看看房价部分，今年2月份，全美房地产经纪人协会统计的数据显示，各类型房价中位数达384,500美元，年增幅是 5.7%。所以我们假设，家庭收入74,580美元的人，购买384,500美元的房产。</p>
-<p>我们使用30年固定抵押贷款利率，利率设定是7%，经贷款计算器计算后，每月的还款会是2,365美元。个数字已经占到家庭月收入的百分之38，所以不能算是负担得起的房价，不过我认为这还算是不错的情况。要是以七八万美元的家庭年收入，但是却住在所谓的美国一线城市，房价可能高达一倍，每月还款就会到达大约4,800美元，那就会到达年收入的百分之77以上，这会是相当沉重的负荷！</p>
+<p>我们使用30年固定抵押贷款利率，利率设定是7%，经贷款计算器计算后，每月的还款会是2,365美元。这个数字已经占到家庭月收入的38%，所以不能算是负担得起的房价，不过我认为这还算是不错的情况。要是以七八万美元的家庭年收入，但是却住在所谓的美国一线城市，房价可能高达一倍，每月还款就会到达大约4,800美元，那就会到达年收入的77%以上，这会是相当沉重的负荷！</p>
 <h2>一半人对支付住房费用有困难</h2>
 <p>所以，现在你看到很多媒体都在报导，住房费用老早已经超出美国人的负担能力。房地产网站Redfin最近的一项调查发现，美国有一半的房主和租屋者难以负担住房费用。这项全国性的调查，有2,995名受访者，其中有1,494人表示，他们有时或经常，或严重难以支付定期租金或抵押贷款。</p>
-<p>这其中多数人，有34.5%表示，他们在过去一年里，放弃了假日努力工作，来减轻每月的费用。有些负担更困难的人，有22%表示，他们用不吃饭来支付费用，也就是说，他们可能减少每月的食物花费，或是是减少用餐来存下高昂的住房开销。</p>
+<p>这其中多数人，有34.5%表示，他们在过去一年里，放弃了假日努力工作，来减轻每月的费用。有些负担更困难的人，有22%表示，他们用不吃饭来支付费用，也就是说，他们可能减少每月的食物花费，或是减少用餐来存下高昂的住房开销。</p>
 <p>另外，有20.7%的人选择加班；还有20.6%人，用出售二手物品来增加收入；17.9%的人向朋友或家里人借钱；也有17.6%的人动用了退休储蓄；还有15.6%的人选择延迟或跳过去看病的医疗花费。</p>
 <p>这项民调还进一步看种族之间的差异，他们发现黑人受访者有25.9%，选择用加班，来减轻每个月的住房费用；而西班牙裔的受访者，有28.2%最有可能用卖掉二手物品的方式，来支付账单；而选择不休假来支付费用，在亚裔受访者中，占有43.8%，白人受访者也占有39.6%。这项调查很有趣，似乎每个种族的特性，从这个调查中也看到一些端倪，但是不管哪个族裔，现在都只能努力赚钱来养家糊口了。</p>
-<p><span style="color: #0000ff;">美国人为买房重大牺牲？｜一半美国人 难以负担住房｜百万房价城市 暴增｜房市也有好消息！【美国地产热点】第154集</span><br />
-<a title="YouTube video player" src=""></a><a href="https://d3myewunzonann.cloudfront.net/I9p8PmuHo"><img width="600" src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/embed/66qV9B2DYMc?si=TkjWm7R8jjignMIm" width="560" b="315" frameborder="0" allowfullscreen="allowfullscreen"></a></p>
+<p><span style="color: #0000ff;">美国人为买房重大牺牲？｜一半美国人 难以负担住房｜百万房价城市 暴增｜房市也有好消息！【美国地产热点】第154集</span></p>
+<p><center><a title="YouTube video player" src=""></a><a href="https://d3dnxm84b62m8k.cloudfront.net/O9vsyqVVs"><img width="600" src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/embed/66qV9B2DYMc?si=TkjWm7R8jjignMIm" width="640" b="360” frameborder=" allowfullscreen="allowfullscreen"></a></center></p>
 <h2>千禧世代提前动用退休储蓄</h2>
 <p>不过，有一点我是比较惊讶的，有13.5%的千禧世代，已经动用退休储蓄来支付每月的费用。大多数的千禧世代都还没有退休，但是住房的负担已经变得非常紧张了，不管是房价或者是利率，都是这几十年来最高的。从某些标准来看，千禧世代在退休的准备方面，确实是落后于他们的上一代。</p>
 <p>不过，有一个退休金法规可以特别留意，美国国税局通常会对59.5岁之前，从退休账户提款的人课税，但是对于符合条件的首次购房者，他们最多可以享有免税借贷1万美元的资格。就是可以当作应急之用吧！</p>
 <h2>百万房价等级的城市暴增</h2>
-<p>现在全美拥有最多百万房产的州，比一年前增加了59个，到达550个城市。所谓百万房产城市，指的是该城市的房价中位数到达百万美元的等级，加州是最多的，最新数据来到210个，这比后面五名城市的总和都还要多！后面二到六名是纽约州、新泽西州、佛罗里达州、麻萨诸塞州和科罗拉多州。几乎所有的州都有所增加，只有佛罗里达州、德州和德拉瓦州出现减少。</p>
+<p>现在全美拥有最多百万房产的州，比一年前增加了59个，到达550个城市。所谓百万房产城市，指的是该城市的房价中位数到达百万美元的等级，加州是最多的，最新数据达到210个，这比后面五名城市的总和都还要多！后面二到六名是纽约州、新泽西州、佛罗里达州、麻萨诸塞州和科罗拉多州。几乎所有的州都有所增加，只有佛罗里达州、德州和德拉瓦州出现减少。</p>
 <p>以都会区来看的话，纽约都会区展现最强劲的升值，一共有106个城市到达百万等级，而且仅相差一年的时间，竟然增加了24个，是所有都会区增幅最高的。其次是旧金山、洛杉矶、波士顿、加州圣荷西、西雅图、迈阿密-劳德代尔堡都会区、华盛顿特区、圣地牙哥和加州的圣玛丽亚-圣塔芭芭拉、圣罗莎都会区。</p>
 <h2>抵押贷款利率走势不妙</h2>
 <p>令人沮丧的是，抵押贷款利率近期又有上扬的势态。虽然4月4日的一周以来，30年固定的平均利率是6.82%，是较一个月前有所下降。不过，根据比较即时的每日数据显示，利率再度出现陡升的趋势，4月11日来到7.37%，比一周前或一个月前都还要高。这对买家的购买能力，将再度受到严重打击。</p>
-<figure id="attachment_14225550" aria-describedby="caption-attachment-14225550" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/04/id14225550-fb0d5bd548ba9bbb81c0d4c64683371a.jpeg"><img class="size-large wp-image-14225550" src="https://i.epochtimes.com/assets/uploads/2024/04/id14225550-fb0d5bd548ba9bbb81c0d4c64683371a-600x375.jpeg" alt="" width="600" b="375" /></a><figcaption id="caption-attachment-14225550" class="wp-caption-text">美国陷入住房危机，使许多人难以负担房价。（Shutterstock）</figcaption></figure>
+<figure id="attachment_14225550" aria-describedby="caption-attachment-14225550" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/04/id14225550-fb0d5bd548ba9bbb81c0d4c64683371a.jpeg"><img decoding="async" class="size-large wp-image-14225550" src="https://i.epochtimes.com/assets/uploads/2024/04/id14225550-fb0d5bd548ba9bbb81c0d4c64683371a-600x375.jpeg" alt="" width="600" b="375" /></a><figcaption id="caption-attachment-14225550" class="wp-caption-text">美国陷入住房危机，使许多人难以负担房价。（Shutterstock）</figcaption></figure>
 <p>现在比较让人担忧的是，3月份的通胀率又上升了，CPI年涨幅来到3.5%，比2月份的3.2%还高，也高于市场预期的3.4%。至于，核心通胀率的年率，并未如预期下降，仍维持在2月的3.8%。这样的数据表现，不仅让金融市场非常担心，连带对抵押贷款利率又会造成上行压力，让原本在今年以来，维持在7%以下的利率，开始又有回升的空间。这是大家要特别留意的地方。</p>
 <p>现在很多专家对美联储要降息的看法，是越来越悲观了，最早有不少人认为，今年3月就会开始降息，但是随着时间过去，通胀越来越顽固，有人认为6月才会降息，现在甚至有专家认为，9月才会开始，而且不是降息3次，是降息2次。</p>
 <p>摩根大通的执行长杰米?戴蒙在4/8发布的年度致股东信中警告，通胀可能比市场预期的“更加棘手”。戴蒙认为，“似乎存在大量持续的通胀压力，而且这种压力可能会持续下去。”</p>
@@ -41,38 +41,43 @@
 <p>我们可以从数据看到，现在美国人真的是很难买得起房子，买房的抵押贷款申请量，在4/5的一周时间，已经较前一周前下降5%，也比去年同期下降23%。按照房地美的数据，4/11为止的一周，平均利率是6.88%，比一年前的同期还高出0.6%。所以，难怪很多美国人买不下去，都选择再观望看看。</p>
 <h2>房市概况总结</h2>
 <p>最后，总结当前的美国房市概况：房价现在应该处于上涨状态，但在不同的数据中有涨有跌，但跌幅微小；新上市的供应量有明显增加；上市天数还是处于较快的情况，毕竟供应量还是不够，仍会有抢房的情况；上市房的挂牌价陆续有降价情形，可以保持观察；抵押贷款利率，因为通胀持续，而且降息困难，所以有升高趋势，这几点买家要特别留意。◇</p>
-<p>责任编辑：</p>
+<p>责任编辑：李曜宇#</p>
+<div class="related-article" style="display: block;"><span style="color: #000;font-weight:bold;">推荐阅读：</span></div>
+<ul class="related-posts"style="color: #0000ff; list-style: inside;">
+<li><span style="font-weight:bold;display: inline-block;"><a style="color: #0000ff; "href=><a href="https://github.com/1992513/djy/blob/master/gb/24/3/24/n14209824.md#1?utm_term=djy_a_rel_end" target="_blank" rel="noopener">苦恼房价太贵？搬家到这里直接送土地！</a></span></li>
+<li><span style="font-weight:bold;display: inline-block;"><a style="color: #0000ff; "href=><a href="https://github.com/1992513/djy/blob/master/gb/24/3/21/n14207153.md#1?utm_term=djy_a_rel_end" target="_blank" rel="noopener">美国最难被录取的20所大学 毕业生收入高</a></span></li>
+<li><span style="font-weight:bold;display: inline-block;"><a style="color: #0000ff; "href=><a href="https://github.com/1992513/djy/blob/master/gb/23/12/9/n14133243.md#1?utm_term=djy_a_rel_end" target="_blank" rel="noopener">最热门工作不需大学文凭 年薪可高达8万美元</a></span></li>
+</ul>
 	
 <hr>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/20/n14140505.md#1">利率涨 今年买房能力仍增长的美国城市</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/19/n14184592.md#1">美国家庭育儿加房贷 每月支出达收入66%</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/3/4/n14194623.md#1">美国房地产佣金制度将大转变 屋主有福了</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/3/17/n14203945.md#1">美房产经纪协会取消6%佣金规定 房价会降吗？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/12/20/n14140505.md#1">利率涨 今年买房能力仍增长的美国城市</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/2/19/n14184592.md#1">美国家庭育儿加房贷 每月支出达收入66%</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/3/4/n14194623.md#1">美国房地产佣金制度将大转变 屋主有福了</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/3/17/n14203945.md#1">美房产经纪协会取消6%佣金规定 房价会降吗？</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank">警卫目击活摘器官</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/17/10/29/n9783517.md#1" target="_blank">林辉：刚正不阿包青天  中共歪批其虚伪</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/18/6/6/n10461502.md#1" target="_blank">四位中国军医的人生奇遇</a></li><hr>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank">印度媒体报道东方</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/10/7/10/n2962557.md#1" target="_blank">鲜为人知的马克思之二：自大的马克思</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/1/23/n10081583.md#1" target="_blank">九旬老太自己洗衣做饭 打破医生20年前判定</a></li><hr>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/9/n14221642.md#1">“日食”的现象与奥秘 你知道多少？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/11/n14223291.md#1">哈佛大学教授：UFO经多维空间到地球</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/9/n14221764.md#1">文武双全的儒家典范颜真卿 何以终成道教神仙？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/8/n14220557.md#1">【未解之谜】潜伏地球的外星生物？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/3/26/n14211353.md#1">他做了什么？ 无心插柳铺就自身功名路！</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/13/n14225032.md#1">【菁英论坛】江河日下 传习六月将出“大招”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/12/n14224307.md#1">【环球直击】福建黑帮遥控陆配 收购台护照供人冒用</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/13/n14225047.md#1">【探索时分】中共无侦-7首次现身日本海</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/12/n14224342.md#1">【名家专栏】台湾沱江级护卫舰物超所值</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/11/n14223697.md#1">【秦鹏观察】越南华女被判死刑 中国地产商慌了？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/12/n14224054.md#1">黄金价格一日多变 大陆批发商连夜进货</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/11/n14223634.md#1">章子怡主演《酱园弄》入围戛纳 角色海报曝光</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/12/n14224486.md#1">无端被嘲“老了” 周慧敏晒素颜近照打脸酸民</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/13/n14225107.md#1">陆女星关凌辅导儿女作业气到心绞痛 评论炸锅</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/11/n14223667.md#1">渲染夫妻和婆媳矛盾？6部大陆短剧遭下架</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/13/n14225068.md#1">黄磊承认躺平：2年没拍戏 3年没当男主角</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/10/n14222781.md#1">锅子烧焦这样刷干净 不费吹灰之力</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/12/n14224196.md#1">专家：房屋的4个缺失会让买家反感 难以售出</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/3/28/n14212517.md#1">摆脱自体免疫疾病！做3件事彻底修复免疫系统</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/3/8/n14197285.md#1">慈禧两招安睡方 3分钟睡前伸展操</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/6/n14219653.md#1">切辣椒后手不再火辣辣  这6种居家常备品可缓解</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/26/n14277490.md#1">故宫六百年不淹水是怎样作到的？为何纪录不保？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14281635.md#1">【未解之谜】“黛玉”再次转世归来？陈晓旭的四世轮回</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/24/n14276161.md#1">【古道人生】商人只重利？义气干霄的商人在这里</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14281646.md#1">【佳人传】 作诗千首 持斋修道的汪端</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/29/n14280210.md#1">苏轼小时和黠鼠交手 他为何输了？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/4/n14283716.md#1">【新闻大破解】启动无锚印钞？红朝末象总爆发</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/5/n14283950.md#1">【时事金扫描】中东新战争？真主党轰以色列</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/5/n14283947.md#1">【新闻五人行】大陆金融女学霸轻生 全网痛议</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/4/n14283509.md#1">英国民宅天花板上藏18万只蜜蜂 7年没人知</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/3/n14283104.md#1">逛Costco时五种令员工和购物者恼火的行为</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/3/n14283044.md#1">《繁花》在大陆爆红 香港收视率却触底</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/2/n14282327.md#1">吴亦凡入狱3年 网传其母欲卖豪车换现金</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/4/n14283779.md#1">贝克汉姆夫妇庆银婚 身着25年前紫色礼服放闪</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/2/n14282430.md#1">郑爽未履行金额超1亿 剧集出品方股权被冻结</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/3/n14283097.md#1">世界小姐张梓琳晒带娃照 称8岁长女是苗条姐</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/2/n14282363.md#1">赚多少钱才够 赚多少才算富人 美国人有答案</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/19/n14273401.md#1">如何规划退休生活？简化生活 让身心受益</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/3/n14282796.md#1">什么是“金钱畸形症”？ 如何应对？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/30/n14280784.md#1">告别湿答答 内外除湿这样做</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14281348.md#1">日本北海道之旅 难忘的农庄餐馆</a></li>
 <hr>
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/24/4/14/n14225533.htm">住房危机 美国人为买房做出哪些重大牺牲？</a></p><hr>
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/19920513/djy/blob/master/gb/24/4/14/n14225533.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>本文转自<a href="https://cn.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://cn.epochtimes.com/gb/24/4/14/n14225533.htm">美国人为买房做了哪些牺牲？</a></p><hr>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/24/4/14/n14225533.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
